--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: vmontero <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/13 17:09:13 by vmontero          #+#    #+#              #
-#    Updated: 2021/04/13 19:02:52 by vmontero         ###   ########.fr        #
+#    Updated: 2021/04/14 16:39:09 by vmontero         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,9 +16,16 @@ FLAGS = -Wall -Werror -Wextra
 
 SRCS = 	ft_bzero.c		\
 		ft_memset.c		\
+		ft_memchr.c		\
+		ft_memcmp.c		\
 		ft_memcpy.c		\
 		ft_memccpy.c	\
 		ft_memmove.c	\
+		ft_strlcpy.c	\
+		ft_strncmp.c	\
+		ft_strchr.c		\
+		ft_strrchr.c	\
+		ft_strlen.c		\
 
 OBJS = $(SRCS:.c=.o)
 
