--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: vmontero <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/13 17:09:13 by vmontero          #+#    #+#              #
-#    Updated: 2021/04/14 16:39:09 by vmontero         ###   ########.fr        #
+#    Updated: 2021/04/15 18:53:02 by vmontero         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,13 @@ NAME = libft.a
 
 FLAGS = -Wall -Werror -Wextra
 
-SRCS = 	ft_bzero.c		\
+SRCS = 	ft_atoi.c		\
+		ft_bzero.c		\
+		ft_isalpha.c	\
+		ft_isalnum.c	\
+		ft_isascii.c	\
+		ft_isdigit.c	\
+		ft_isprint.c	\
 		ft_memset.c		\
 		ft_memchr.c		\
 		ft_memcmp.c		\
@@ -25,7 +31,10 @@ SRCS = 	ft_bzero.c		\
 		ft_strncmp.c	\
 		ft_strchr.c		\
 		ft_strrchr.c	\
+		ft_strlcat.c	\
 		ft_strlen.c		\
+		ft_tolower.c	\
+		ft_toupper.c	\
 
 OBJS = $(SRCS:.c=.o)
 
