--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: vmontero <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/13 17:09:13 by vmontero          #+#    #+#              #
-#    Updated: 2021/04/15 18:53:02 by vmontero         ###   ########.fr        #
+#    Updated: 2021/04/17 20:40:05 by vmontero         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,8 +14,15 @@ NAME = libft.a
 
 FLAGS = -Wall -Werror -Wextra
 
+CC = gcc 
+
+RM = rm -f
+
+AR = ar rcs
+
 SRCS = 	ft_atoi.c		\
 		ft_bzero.c		\
+		ft_calloc.c		\
 		ft_isalpha.c	\
 		ft_isalnum.c	\
 		ft_isascii.c	\
@@ -27,12 +34,20 @@ SRCS = 	ft_atoi.c		\
 		ft_memcpy.c		\
 		ft_memccpy.c	\
 		ft_memmove.c	\
+		ft_putchar_fd.c	\
+		ft_putendl_fd.c	\
+		ft_putnbr_fd.c	\
+		ft_putstr_fd.c	\
+		ft_strdup.c		\
+		ft_strjoin.c	\
 		ft_strlcpy.c	\
 		ft_strncmp.c	\
+		ft_strnstr.c	\
 		ft_strchr.c		\
 		ft_strrchr.c	\
 		ft_strlcat.c	\
 		ft_strlen.c		\
+		ft_substr.c		\
 		ft_tolower.c	\
 		ft_toupper.c	\
 
@@ -42,16 +57,15 @@ HEADER = libft.h
 
 all: $(NAME)
 
-$(NAME):
-	gcc -c $(FLAGS) -I $(HEADER) $(SRCS)
-	ar rc $(NAME) $(OBJS)
-	ranlib $(NAME)
+$(NAME):	$(SRCS)
+			$(CC)  $(FLAGS) -I $(HEADER) -c  $(SRCS)
+			$(AR) $(NAME) $(OBJS)
 
 clean:
-	rm -f $(OBJS)
+	$(RM) $(OBJS)
 
 fclean:
-	rm -f $(NAME)
+	$(RM) $(NAME)
 
 re: fclean all
 
